--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -1,28 +1,211 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+		<!--     Fonts and icons     -->
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+
+		<!--   Material Dashboard CSS   -->
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}">
 	</head>
 	<body>
-		<div class="container">
-			<nav class="gabenav navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="/">Clinical Trials Visualizer</a>
+		<div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+		      <!--
+		        Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
-				<div class="navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="/">Home</a>
-						</li>
-					</ul>
+		        Tip 2: you can also add an image using data-image tag
+		    -->
+		    <div class="logo"><a href="/" class="simple-text logo-normal">
+		    	Drug Visualizer<br>(or whatever)
+		    </a></div>
+		    <div class="sidebar-wrapper">
+		    	<ul class="nav">
+		    		<li class="nav-item active">
+		    			<a class="nav-link" href="/search">
+		    				<i class="material-icons">dashboard</i>
+		    				<p>Custom Search</p>
+		    			</a>
+		    		</li>
+		    		<li class="nav-item ">
+		    			<a class="nav-link" href="/visualizations">
+		    				<i class="material-icons">person</i>
+		    				<p>Visualizations</p>
+		    			</a>
+		    		</li>
+		    	</ul>
+
+		    	<div class="logo"><span class="simple-text logo-normal">Data Sources</span></div>
+		    	<ul class="nav">
+		    		<li class="nav-item">
+		    			<a class="nav-link" href="./dashboard.html">
+		    				<i class="material-icons">check_circle_outline</i>
+		    				<p>FDA</p>
+		    			</a>
+		    		</li>
+		    		<li class="nav-item ">
+		    			<a class="nav-link" href="./user.html">
+		    				<i class="material-icons">check_circle_outline</i>
+		    				<p>DrugCentral</p>
+		    			</a>
+		    		</li>
+		    		<li class="nav-item ">
+		    			<a class="nav-link" href="./tables.html">
+		    				<i class="material-icons">check_circle_outline</i>
+		    				<p>DrugBank</p>
+		    			</a>
+		    		</li>
+		    		<li class="nav-item ">
+		    			<a class="nav-link" href="./typography.html">
+		    				<i class="material-icons">check_circle_outline</i>
+		    				<p>KEGG</p>
+		    			</a>
+		    		</li>
+		    	</ul>
+		    </div>
+		</div>
+
+		<div class="main-panel">
+			<!-- Navbar -->
+			<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+				<div class="container-fluid">
+					<div class="navbar-wrapper">
+						<a class="navbar-brand" href="javascript:;">{{ page_title }}</a>
+					</div>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="navbar-toggler-icon icon-bar"></span>
+						<span class="navbar-toggler-icon icon-bar"></span>
+						<span class="navbar-toggler-icon icon-bar"></span>
+					</button>
+					<div class="collapse navbar-collapse justify-content-end">
+						<form class="navbar-form">
+							<div class="input-group no-border">
+								<input type="text" value="" class="form-control" placeholder="Search...">
+								<button type="submit" class="btn btn-white btn-round btn-just-icon">
+									<i class="material-icons">search</i>
+									<div class="ripple-container"></div>
+								</button>
+							</div>
+						</form>
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="javascript:;">
+									<i class="material-icons">dashboard</i>
+									<p class="d-lg-none d-md-block">
+										Stats
+									</p>
+								</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<i class="material-icons">notifications</i>
+									<span class="notification">5</span>
+									<p class="d-lg-none d-md-block">
+										Some Actions
+									</p>
+								</a>
+								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+									<a class="dropdown-item" href="#">Mike John responded to your email</a>
+									<a class="dropdown-item" href="#">You have 5 new tasks</a>
+									<a class="dropdown-item" href="#">You're now friend with Andrew</a>
+									<a class="dropdown-item" href="#">Another Notification</a>
+									<a class="dropdown-item" href="#">Another One</a>
+								</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<i class="material-icons">person</i>
+									<p class="d-lg-none d-md-block">
+										Account
+									</p>
+								</a>
+								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+									<a class="dropdown-item" href="#">Profile</a>
+									<a class="dropdown-item" href="#">Settings</a>
+									<div class="dropdown-divider"></div>
+									<a class="dropdown-item" href="#">Log out</a>
+								</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</nav>
+			<!-- End Navbar -->
+			<div class="content">
+				<div class="container-fluid">
 
-			{% block body %}{% endblock %}
+				{% block body %}{% endblock %}
 
-			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+				</div>
+			</div>
 		</div>
+
+		<!--   Core JS Files   -->
+		<script src="{{ url_for('static', filename='js/core/jquery.min.js') }}" type="text/javascript"></script>
+		<script src="{{ url_for('static', filename='js/core/popper.min.js') }}" type="text/javascript"></script>
+		<script src="{{ url_for('static', filename='js/core/bootstrap-material-design.min.js') }}" type="text/javascript"></script>
+
+		<!-- Plugin for the Perfect Scrollbar -->
+		<script src="{{ url_for('static', filename='js/plugins/perfect-scrollbar.jquery.min.js') }}"></script>
+
+		<!-- Plugin for the momentJs  -->
+		<script src="{{ url_for('static', filename='js/plugins/moment.min.js') }}"></script>
+
+		<!--  Plugin for Sweet Alert -->
+		<script src="{{ url_for('static', filename='js/plugins/sweetalert2.js') }}"></script>
+
+		<!-- Forms Validations Plugin -->
+		<script src="{{ url_for('static', filename='js/plugins/jquery.validate.min.js') }}"></script>
+
+		<!--  Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
+		<script src="{{ url_for('static', filename='js/plugins/jquery.bootstrap-wizard.js') }}"></script>
+
+		<!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
+		<script src="{{ url_for('static', filename='js/plugins/bootstrap-selectpicker.js') }}" ></script>
+
+		<!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
+		<script src="{{ url_for('static', filename='js/plugins/bootstrap-datetimepicker.min.js') }}"></script>
+
+		<!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
+		<script src="{{ url_for('static', filename='js/plugins/jquery.datatables.min.js') }}"></script>
+
+		<!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
+		<script src="{{ url_for('static', filename='js/plugins/bootstrap-tagsinput.js') }}"></script>
+
+		<!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
+		<script src="{{ url_for('static', filename='js/plugins/jasny-bootstrap.min.js') }}"></script>
+
+		<!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
+		<script src="{{ url_for('static', filename='js/plugins/fullcalendar.min.js') }}"></script>
+
+		<!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
+		<script src="{{ url_for('static', filename='js/plugins/jquery-jvectormap.js') }}"></script>
+
+		<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+		<script src="{{ url_for('static', filename='js/plugins/nouislider.min.js') }}" ></script>
+
+		<!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js') }}"></script>
+
+		<!-- Library for adding dinamically elements -->
+		<script src="{{ url_for('static', filename='js/plugins/arrive.min.js') }}"></script>
+
+		<!--  Google Maps Plugin    -->
+		<!-- <script  src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
+
+		<!-- Chartist JS -->
+		<script src="{{ url_for('static', filename='js/plugins/chartist.min.js') }}"></script>
+
+		<!--  Notifications Plugin    -->
+		<script src="{{ url_for('static', filename='js/plugins/bootstrap-notify.js') }}"></script>
+
+		<!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+		<script src="{{ url_for('static', filename='js/material-dashboard.min.js') }}" type="text/javascript"></script>
 	</body>
 </html>
