--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -5,4 +5,14 @@ TABLE
 
 {{ dict }}
 
+<table>
+    {% for key, value in dict[0].items() %}
+       <tr>
+            <th> {{ key }} </th>
+            <td> {{ value }} </td>
+       </tr>
+    {% endfor %}
+</table>
+
+
 {% endblock %}
