--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,9 +1,17 @@
 {% extends "master.html" %}
 {% block body %}
 
-<h1>Hi there!</h1>
+<div class="row justify-content-center">
+    <div class=" col ">
+        <div class="card">
+            <div class="card-header bg-transparent">
+                <h1>Hi there!</h1>
+            </div>
 
-<!-- {{ db }} -->
-
-<h5> TEST PUSH TO GIT</h5>
+            <div class="card-body">
+                <h5> TEST PUSH TO GIT</h5>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
