--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -20,6 +20,15 @@
 	<!-- Argon CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/argon.css') }}" type="text/css">
 
+	<!-- D3.js -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.3.0/d3-legend.js" charset="utf-8"></script>
+
+		<!-- Load color palettes -->
+		<script src="https://d3js.org/d3-color.v1.min.js"></script>
+		<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
 	<title>Clinical Trial Capstone</title>
 	<link rel="icon" href="{{ url_for('static', filename='img/brand/favicon.png') }}"   type="image/png">
 </head>
