--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/@fortawesome/fontawesome-free/css/all.min.css') }}" type="text/css">
 
 	<!--   Material Dashboard CSS   -->
-	<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}"> -->
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}">
 
 	<!-- Argon CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/argon.css') }}" type="text/css">
@@ -236,7 +236,7 @@
 	<!--   Core JS Files   -->
 	<script src="{{ url_for('static', filename='js/core/jquery.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/core/popper.min.js') }}" type="text/javascript"></script>
-	<!-- <script src="{{ url_for('static', filename='js/core/bootstrap-material-design.min.js') }}" type="text/javascript"></script> -->
+	<script src="{{ url_for('static', filename='js/core/bootstrap-material-design.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/core/bootstrap.bundle.min.js') }}"></script>
 
 	<!-- Plugin for the Perfect Scrollbar -->
@@ -244,9 +244,6 @@
 
 	<!-- Plugin for the momentJs  -->
 	<script src="{{ url_for('static', filename='js/plugins/moment.min.js') }}"></script>
-
-	<!--  Plugin for Sweet Alert -->
-	<script src="{{ url_for('static', filename='js/plugins/sweetalert2.js') }}"></script>
 
 	<!-- Forms Validations Plugin -->
 	<script src="{{ url_for('static', filename='js/plugins/jquery.validate.min.js') }}"></script>
@@ -278,14 +275,8 @@
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 	<script src="{{ url_for('static', filename='js/plugins/nouislider.min.js') }}" ></script>
 
-	<!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js') }}"></script>
-
 	<!-- Library for adding dinamically elements -->
 	<script src="{{ url_for('static', filename='js/plugins/arrive.min.js') }}"></script>
-
-	<!--  Google Maps Plugin    -->
-	<!-- <script  src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
 
 	<!-- Chartist JS -->
 	<script src="{{ url_for('static', filename='js/plugins/chartist.min.js') }}"></script>
