--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -212,12 +212,12 @@
 				<div class="header-body">
 					<div class="row align-items-center py-4">
 						<div class="col-lg-6 col-7">
-							<h6 class="h2 text-white d-inline-block mb-0">Descriptor</h6>
+							<h6 class="h2 text-white d-inline-block mb-0">{{ page_title }}</h6>
 							<nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
 								<ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-									<li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-									<li class="breadcrumb-item"><a href="#">Home</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Report</li>
+									<li class="breadcrumb-item"><a href="/"><i class="fas fa-home"></i></a></li>
+									<li class="breadcrumb-item"><a href="/">Home</a></li>
+									<li class="breadcrumb-item active" aria-current="page">{{ page_title }}</li>
 								</ol>
 							</nav>
 						</div>
