A few minor tweaks

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/@fortawesome/fontawesome-free/css/all.min.css') }}" type="text/css">
 
 	<!--   Material Dashboard CSS   -->
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}">
+	<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}"> -->
 
 	<!-- Argon CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/argon.css') }}" type="text/css">
