--- a/app/templates/visualizations.html
+++ b/app/templates/visualizations.html
@@ -5,7 +5,7 @@
 		<div class="col-md-4">
 			<a href="/visualization/1">
 				<div class="card card-chart">
-					<div class="card-header card-header-info">
+					<div class="card-header">
 						<div class="ct-chart"><img src="{{ url_for('static', filename='img/previews/vis1.png') }}" class="img-fluid"></div>
 					</div>
 					<div class="card-body">
