--- a/app/templates/visualizations.html
+++ b/app/templates/visualizations.html
@@ -1,25 +1,29 @@
 {% extends "master.html" %}
 {% block body %}
 
+	{% for row in result|batch(3) %}
 	<div class="row">
+		{% for visualization in row %}
 		<div class="col-md-4">
-			<a href="/visualization/1">
+			<a href="/visualization/{{ visualization['id'] }}">
 				<div class="card card-chart">
 					<div class="card-header card-header-info">
-						<div class="ct-chart"><img src="{{ url_for('static', filename='img/previews/vis1.png') }}" class="img-fluid"></div>
+						<div class="ct-chart"><img src="/static/img/previews/{{ visualization['thumbnail'] }}" class="img-fluid"></div>
 					</div>
 					<div class="card-body">
-						<h4 class="card-title">Drug Targets By Companies</h4>
-						<p class="card-category">Radar Chart</p>
+						<h4 class="card-title">{{ visualization['title'] }}</h4>
+						<p class="card-category">{{ visualization['description'] }}</p>
 					</div>
 					<div class="card-footer">
 						<div class="stats">
-							<i class="material-icons">bar_chart</i> Created with data from ZINC15
+							<i class="material-icons">bar_chart</i> Created with data from ChemBL
 						</div>
 					</div>
 				</div>
 			</a>
 		</div>
+		{% endfor %}
 	</div>
+	{% endfor %}
 
 {% endblock %}
