--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -10,7 +10,7 @@
 	<!--     Fonts and icons     -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/nucleo/css/nucleo.css') }}"  type="text/css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/@fortawesome/fontawesome-free/css/all.min.css') }}" type="text/css">
 
@@ -23,6 +23,8 @@
 	<!-- D3.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.3.0/d3-legend.js" charset="utf-8"></script>
+
+		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 		<!-- Load color palettes -->
 		<script src="https://d3js.org/d3-color.v1.min.js"></script>
@@ -233,66 +235,17 @@
 		</div>
 	</div>
 
-	<!--   Core JS Files   -->
-	<script src="{{ url_for('static', filename='js/core/jquery.min.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/core/popper.min.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/core/bootstrap-material-design.min.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/core/bootstrap.bundle.min.js') }}"></script>
-
-	<!-- Plugin for the Perfect Scrollbar -->
-	<script src="{{ url_for('static', filename='js/plugins/perfect-scrollbar.jquery.min.js') }}"></script>
-
-	<!-- Plugin for the momentJs  -->
-	<script src="{{ url_for('static', filename='js/plugins/moment.min.js') }}"></script>
-
-	<!-- Forms Validations Plugin -->
-	<script src="{{ url_for('static', filename='js/plugins/jquery.validate.min.js') }}"></script>
-
-	<!--  Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
-	<script src="{{ url_for('static', filename='js/plugins/jquery.bootstrap-wizard.js') }}"></script>
-
-	<!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-	<script src="{{ url_for('static', filename='js/plugins/bootstrap-selectpicker.js') }}" ></script>
-
-	<!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-	<script src="{{ url_for('static', filename='js/plugins/bootstrap-datetimepicker.min.js') }}"></script>
-
-	<!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
-	<script src="{{ url_for('static', filename='js/plugins/jquery.datatables.min.js') }}"></script>
-
-	<!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-	<script src="{{ url_for('static', filename='js/plugins/bootstrap-tagsinput.js') }}"></script>
-
-	<!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-	<script src="{{ url_for('static', filename='js/plugins/jasny-bootstrap.min.js') }}"></script>
-
-	<!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
-	<script src="{{ url_for('static', filename='js/plugins/fullcalendar.min.js') }}"></script>
-
-	<!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
-	<script src="{{ url_for('static', filename='js/plugins/jquery-jvectormap.js') }}"></script>
-
-	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="{{ url_for('static', filename='js/plugins/nouislider.min.js') }}" ></script>
-
-	<!-- Library for adding dinamically elements -->
-	<script src="{{ url_for('static', filename='js/plugins/arrive.min.js') }}"></script>
-
-	<!-- Chartist JS -->
-	<script src="{{ url_for('static', filename='js/plugins/chartist.min.js') }}"></script>
-
-	<!--  Notifications Plugin    -->
-	<script src="{{ url_for('static', filename='js/plugins/bootstrap-notify.js') }}"></script>
-
-	<!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-	<script src="{{ url_for('static', filename='js/material-dashboard.min.js') }}" type="text/javascript"></script>
-
 	<!-- Argon scripts -->
+ 	<!-- Core -->
+ 	<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+ 	<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/js.cookie.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/jquery.scrollbar/jquery.scrollbar.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/jquery-scrollLock.min.js') }}"></script>
+
 	<!-- Optional JS -->
 	<script src="{{ url_for('static', filename='js/clipboard.min.js') }}"></script>
+	
 	<!-- Argon JS -->
 	<script src="{{ url_for('static', filename='js/argon.js') }}"></script>
 </body>
