--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -14,9 +14,6 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/nucleo/css/nucleo.css') }}"  type="text/css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/@fortawesome/fontawesome-free/css/all.min.css') }}" type="text/css">
 
-	<!--   Material Dashboard CSS   -->
-	<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/material-dashboard.min.css') }}"> -->
-
 	<!-- Argon CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/argon.css') }}" type="text/css">
 
@@ -24,6 +21,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.3.0/d3-legend.js" charset="utf-8"></script>
 
+    <!-- Plotly js -->
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 	<!-- Load color palettes -->
