--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -21,33 +21,20 @@
 								<div></div>
 							</div>
 						</div>
+
+						{% for id in result['classes'].split(',') %}
 						<div class="row">
 							<div class="col-12">
-								<div id="{{ result['class'] }}"></div>
+								<div id="{{ id }}"></div>
 							</div>
 						</div>
-<!-- 						<div class="row">
-							<div class="col-12">
-								<div id="dotMatrixChart"></div>
-							</div>
-						</div>
-
-
-						<div class="container-fluid">
-							<div class="row">
-								<div class="col-12">
-									<div id="bubble-plot-3d"></div>
-								</div>
-							</div>
-						 </div> -->
-
+						{% endfor %}
 
 
 					</div>
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">{{ result['title'] }}</h4>
-					<!-- <p class="card-category">Some cool stuff about drugs</p> -->
 				</div>
 				<div class="card-footer">
 					<div class="stats">
