--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -74,12 +74,12 @@
                                 </ul>
                             </div>
                         </li>
-						<li class="nav-item">
+<!-- 						<li class="nav-item">
 							<a class="nav-link" href="">
 								<i class="ni ni-bullet-list-67 text-default"></i>
 								<span class="nav-link-text">Drug</span>
 							</a>
-						</li>
+						</li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="">
                                 <i class="ni ni-bullet-list-67 text-default"></i>
