--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -81,7 +81,7 @@
 							</a>
 						</li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="">
+                            <a class="nav-link" href="/api">
                                 <i class="ni ni-bullet-list-67 text-default"></i>
                                 <span class="nav-link-text">API</span>
                             </a>
