--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -15,7 +15,7 @@
 						</div>
 						{% endfor %}
 
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-10"></div>
 					  		<div class="col-2">
 					  			<form id="companies_form">
@@ -23,7 +23,7 @@
 									<button type="submit" class="btn btn-primary">Submit</button>
 								</form>
 							</div>
-						</div>
+						</div> -->
 
 					</div>
 				</div>
