Add file for manual CSS overrides

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -33,6 +33,8 @@
 	<link rel="stylesheet" href="/static/css/visualizations/{{ result['name'] }}.css" type="text/css">
 	{% endif %}
 
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
+
 	<title>Clinical Trial Capstone</title>
 	<link rel="icon" href="{{ url_for('static', filename='img/brand/favicon.png') }}"   type="image/png">
 </head>
