--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -102,8 +102,8 @@
                         </div>
 
                         <div class="row mt-3">
-                            <table class="table table-sm table-responsive">
-                                <thead>
+                            <table class="table table-sm table-responsive w-auto">
+                                <thead class="thead-light">
                                     <th>drug_id</th>
                                     <th>product_name</th>
                                     <th>labeller</th>
@@ -115,6 +115,44 @@
                                     <th>another_col</th>
                                     <th>another_col</th>
                                 </thead>
+                                <tr class="table-active">
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td class="form-inline">
+                                        <div class="row input-group">
+                                            <div class="col-3">
+                                                <select class="form-control form-control-sm">
+                                                    <option>></option>
+                                                    <option><</option>
+                                                    <option>=</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-9">
+                                                <input class="form-control form-control-sm" type="text" placeholder="filter" style="max-width: 100%;">
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td class="form-inline">
+                                        <div class="row input-group">
+                                            <div class="col-3">
+                                                <select class="form-control form-control-sm">
+                                                    <option>></option>
+                                                    <option><</option>
+                                                    <option>=</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-9">
+                                                <input class="form-control form-control-sm" type="text" placeholder="filter" style="max-width: 100%;">
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                    <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
+                                </tr>
                                 <tr>
                                     <td>data</td>
                                     <td>data</td>
