Remove a bunch of static html we are now building with JS

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -10,80 +10,7 @@
                         <p class="h3">Select fields to export:</p>
 
                         <table class="table table-sm table-responsive" id="selection-sidebar">
-                            <!-- <thead>
-                                <tr>
-                                    <th>View name</th>
-                                    <th>Enabled</th>
-                                </tr>
-                            </thead> -->
-
-                            <!-- <tr>
-                                <td data-toggle="collapse" data-target="#productfields" class="accordion-toggle">product <small class="text-muted">click to expand</small></td>
-                                <td>
-                                    <label class="custom-toggle">
-                                        <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                        <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                    </label>
-                                </td>
-                            </tr> -->
-
-                            <tr>
-                                <td class="hiddenRow" colspan="2">
-
-                                    <table class="table table-sm accordion-body collapse ml-3" id="productfields">
-                                        <tr>
-                                            <td class="text-muted">drug_id</td>
-                                            <td>
-                                                <label class="custom-toggle">
-                                                    <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                                    <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                                </label>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="text-muted">product_name</td>
-                                            <td>
-                                                <label class="custom-toggle">
-                                                    <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                                    <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                                </label>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="text-muted">labeller</td>
-                                            <td>
-                                                <label class="custom-toggle">
-                                                    <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                                    <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                                </label>
-                                            </td>
-                                        </tr>
-                                    </table>
-
-                                </td>
-                            </tr>
-
-
-<!--                             <tr>
-                                <td>patent <small class="text-muted">click to expand</td>
-                                <td>
-                                    <label class="custom-toggle">
-                                        <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                        <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                    </label>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>compound <small class="text-muted">click to expand</td>
-                                <td>
-                                    <label class="custom-toggle">
-                                        <input type="checkbox" checked data-toggle="toggle" id="checkbox2" name="product">
-                                        <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
-                                    </label>
-                                </td>
-                            </tr> -->
-
+                            <!-- explore.js generates sidebar with list of views and column names -->
                         </table>
 
                     </div>
