Trying to get overflow scroll bar working

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -9,7 +9,7 @@
                     <div class="col-3">
                         <p class="h3">Select fields to export:</p>
 
-                        <table class="table table-sm table-responsive" id="selection-sidebar">
+                        <table class="table table-sm table-responsive overflow-auto mh-100" id="selection-sidebar">
                             <!-- explore.js generates sidebar with list of views and column names -->
                         </table>
 
