Commented out a bunch of unused stuff

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -22,15 +22,16 @@
                             </div>
                             <div class="col">
                                 <div class="float-right">
-                                    <button class="btn btn-lg btn-primary" type="submit">Update preview</button>
+                                    <!-- <button class="btn btn-lg btn-primary" type="submit">Update preview</button> -->
+                                    <a class="btn btn-lg btn-primary" href="#" id="update-preview-button">Update preview</a>
                                     <button class="btn btn-lg btn-danger" type="submit">Export</button>
                                 </div>
                             </div>
                         </div>
 
                         <div class="row mt-3">
-                            <table class="table table-sm table-responsive w-auto">
-                                <thead class="thead-light">
+                            <table class="table table-sm table-responsive w-auto" id="data-preview">
+<!--                                 <thead class="thead-light">
                                     <th>drug_id</th>
                                     <th>product_name</th>
                                     <th>labeller</th>
@@ -41,8 +42,8 @@
                                     <th>another_col</th>
                                     <th>another_col</th>
                                     <th>another_col</th>
-                                </thead>
-                                <tr class="table-active">
+                                </thead> -->
+                                <!-- <tr class="table-active">
                                     <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
                                     <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
                                     <td class="form-inline">
@@ -163,7 +164,7 @@
                                     <td>data</td>
                                     <td>data</td>
                                     <td>data</td>
-                                </tr>
+                                </tr> -->
                             </table>
                         </div>
 
