--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -31,7 +31,7 @@
 
                         <div class="row mt-3">
                             <table class="table table-sm table-responsive w-auto" id="data-preview">
-<!--                                 <thead class="thead-light">
+                                <!-- <thead class="thead-light">
                                     <th>drug_id</th>
                                     <th>product_name</th>
                                     <th>labeller</th>
@@ -42,8 +42,8 @@
                                     <th>another_col</th>
                                     <th>another_col</th>
                                     <th>another_col</th>
-                                </thead> -->
-                                <!-- <tr class="table-active">
+                                </thead>
+                                <tr class="table-active">
                                     <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
                                     <td><input class="form-control form-control-sm" type="text" placeholder="filter"></td>
                                     <td class="form-inline">
