Revert "Removed unused javascript cookie script"
This reverts commit e5f429598049edd8e0e2397c313a1a3099708564.

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -187,6 +187,7 @@
  	<!-- Core -->
  	<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
  	<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/js.cookie.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/jquery.scrollbar/jquery.scrollbar.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/jquery-scrollLock.min.js') }}"></script>
 	
