A number of bugfixes, and added join dropdown

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -9,6 +9,15 @@
                     <div class="col-3">
                         <p class="h3">Select fields to export:</p>
 
+                        <form class="form-inline mb-4 mr-4 ml-4 mt-3">
+                            <div class="form-group">
+                                <label for="joinSelect" class="mr-2">Join type: </label>
+                                <select class="form-control form-control-sm" id="joinSelect">
+                                    <option>inner</option>
+                                </select>
+                            </div>
+                        </form>
+
                         <table class="table table-sm table-responsive overflow-auto mh-100" id="selection-sidebar">
                             <!-- explore.js generates sidebar with list of views and column names -->
                         </table>
