Let user select what kind of join to perform

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -14,6 +14,7 @@
                                 <label for="joinSelect" class="mr-2">Join type: </label>
                                 <select class="form-control form-control-sm" id="joinSelect">
                                     <option>inner</option>
+                                    <option>left</option>
                                 </select>
                             </div>
                         </form>
