--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -9,15 +9,30 @@
                     <div class="col-3">
                         <p class="h3">Select fields to export:</p>
 
-                        <form class="form-inline mb-4 mr-4 ml-4 mt-3">
-                            <div class="form-group">
-                                <label for="joinSelect" class="mr-2">Join type: </label>
-                                <select class="form-control form-control-sm" id="joinSelect">
-                                    <option>inner</option>
-                                    <option>left</option>
-                                </select>
+                            <div class="form-row mt-4 mb-2">
+                                <div class="col">
+                                    <label for="joinSelect">Join type: </label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-control form-control-sm" id="joinSelect">
+                                        <option>inner</option>
+                                        <option>left</option>
+                                    </select>
+                                </div>
                             </div>
-                        </form>
+                            <div class="form-row mb-4">
+                                <div class="col">
+                                    <label for="resultsSelect">Preview results: </label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-control form-control-sm" id="resultsSelect">
+                                        <option>10</option>
+                                        <option>25</option>
+                                        <option selected>50</option>
+                                        <option>100</option>
+                                    </select>
+                                </div>
+                            </div>
 
                         <table class="table table-sm table-responsive overflow-auto mh-100" id="selection-sidebar">
                             <!-- explore.js generates sidebar with list of views and column names -->
