Add download functionality to frontend

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -48,7 +48,7 @@
                             <div class="col">
                                 <div class="float-right">
                                     <a class="btn btn-lg btn-primary" href="#" id="update-preview-button">Update preview</a>
-                                    <button class="btn btn-lg btn-danger" type="submit">Export</button>
+                                    <a class="btn btn-lg btn-danger" href="#" id="export-button">Export</a>
                                 </div>
                             </div>
                         </div>
