--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -42,11 +42,19 @@
 
                     <div class="col-9">
                         <div class="row">
-                            <div class="col">
+                            <div class="col-3">
                                 <p class="h3">Preview data:</p>
                             </div>
-                            <div class="col">
+                            <div class="col-9">
                                 <div class="float-right">
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label mr-2" for="multi-file-checkbox">Multi-file download</label>
+                                        <label class="custom-toggle">
+                                            <input type="checkbox" checked data-toggle="toggle" id="multi-file-checkbox">
+                                            <span class="custom-toggle-slider rounded-circle" data-label-off="No" data-label-on="Yes"></span>
+                                        </label>
+                                        
+                                    </div>
                                     <a class="btn btn-lg btn-primary" href="#" id="update-preview-button">Update preview</a>
                                     <a class="btn btn-lg btn-danger" href="#" id="export-button">Export</a>
                                 </div>
