adding more recommended values

--- a/app/templates/lookup_compound_descriptors.html
+++ b/app/templates/lookup_compound_descriptors.html
@@ -10,11 +10,11 @@
 
                         <h1>Please enter a compound name</h1>
                         
-                        <p> Try "Adefovir dipivoxil" or "Amikacin" for a non-bioavailable compound
-                            or "Abacavir" for a bioavailable compound 
+                        <p> Try "Adefovir dipivoxil", "Atorvastatin", or "Amikacin" for a non-bioavailable compound. 
+                            Try "Abacavir", "Acyclovir", or "Sumatriptan" for a bioavailable compound 
                         </p>
                         <form action="/compound/explore" method="post">
-                            <input type="text" name="compound_name" value='Atorvastatin'> 
+                            <input type="text" name="compound_name" > 
                             <input type="submit" value="Submit"> 
                         </form>
 
