more_test_cases

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -88,39 +88,6 @@
 							</a>
 						</li>
 					</ul>
-					<!-- Divider -->
-					<hr class="my-3">
-					<!-- Heading -->
-					<h6 class="navbar-heading p-0 text-muted">
-						<span class="docs-normal">Data Sources</span>
-					</h6>
-					<!-- Navigation -->
-					<ul class="navbar-nav mb-md-3">
-						<li class="nav-item">
-							<a class="nav-link" href="" target="_blank">
-								<i class="ni ni-ui-04"></i>
-								<span class="nav-link-text">FDA</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="" target="_blank">
-								<i class="ni ni-ui-04"></i>
-								<span class="nav-link-text">DrugCentral</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="" target="_blank">
-								<i class="ni ni-ui-04"></i>
-								<span class="nav-link-text">DrugBank</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="" target="_blank">
-								<i class="ni ni-ui-04"></i>
-								<span class="nav-link-text">KEGG</span>
-							</a>
-						</li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -132,19 +99,19 @@
 			<div class="container-fluid">
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<!-- Search form -->
-					<form class="navbar-search navbar-search-light form-inline mr-sm-3" id="navbar-search-main">
-						<div class="form-group mb-0">
-							<div class="input-group input-group-alternative input-group-merge">
-								<div class="input-group-prepend">
-									<span class="input-group-text"><i class="fas fa-search"></i></span>
-								</div>
-								<input class="form-control" placeholder="Search" type="text">
-							</div>
-						</div>
-						<button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close">
-							<span aria-hidden="true">×</span>
-						</button>
-					</form>
+{#					<form class="navbar-search navbar-search-light form-inline mr-sm-3" id="navbar-search-main">#}
+{#						<div class="form-group mb-0">#}
+{#							<div class="input-group input-group-alternative input-group-merge">#}
+{#								<div class="input-group-prepend">#}
+{#									<span class="input-group-text"><i class="fas fa-search"></i></span>#}
+{#								</div>#}
+{#								<input class="form-control" placeholder="Search" type="text">#}
+{#							</div>#}
+{#						</div>#}
+{#						<button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close">#}
+{#							<span aria-hidden="true">×</span>#}
+{#						</button>#}
+{#					</form>#}
 					<!-- Navbar links -->
 					<ul class="navbar-nav align-items-center  ml-md-auto ">
 						<li class="nav-item d-xl-none">
