Remove some unused styles

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -34,7 +34,7 @@
                                 </div>
                             </div>
 
-                        <table class="table table-sm table-responsive overflow-auto mh-100" id="selection-sidebar">
+                        <table class="table table-sm table-responsive" id="selection-sidebar">
                             <!-- explore.js generates sidebar with list of views and column names -->
                         </table>
 
