pulling data about compound to template

--- a/app/templates/explore_compound.html
+++ b/app/templates/explore_compound.html
@@ -21,6 +21,7 @@
 {% if descriptor_dict is defined %} 
     <p> Data for descriptors is available :) </p>
 
+    {{descriptor_dict}}
 {% else %} 
 {% endif %} 
 
